fix spacing

--- a/index.css
+++ b/index.css
@@ -145,7 +145,7 @@ h2 {
   justify-content: center;
   color: #FFFFFF;
   max-width: 550px;
-  margin: 75px 130px 0px 0px;
+  margin: 0px 150px 0px 0px;
 }
 .desc-2-text {
   color: #FFFFFF;
